Trying to fix background to show with better resolution on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -64,11 +64,12 @@ body {
   text-shadow: 0 0 5px rgba(255, 255, 255, 1);
 }
 
-@media (max-width: 1170px) {
+@media (max-width: 768px) {
   body {
     background-image: url('./assets/images/background.jpg'); 
-    background-size: cover; 
+    background-size:cover; 
     background-repeat: no-repeat;
     background-attachment: fixed; 
+    background-attachment: scroll;
   }
 }
